# Algorithms_3

./: ArraySequence.hpp  CMakeLists.txt  Complex.cpp  Complex.hpp  DynamicArray.hpp  Errors.h  LinkedList.hpp  ListSequence.hpp  Matrix.hpp  Sequence.cpp  Sequence.h  Tests.cpp  TestsArraySequence.hpp  TestsDynamicArray.hpp  TestsLinkedList.hpp  TestsListSequence.hpp  TestsMatrix.hpp  main.cpp  menu.cpp
